--- a/assets/style.css
+++ b/assets/style.css
@@ -1,25 +1,27 @@
+
 #topDiv {
     height: 75vh;
-    /* border: 1px solid; */
     padding-top: 1vh;
     background-image: linear-gradient(10deg, transparent 45%,darkcyan,black);
+    background-size: 100% 75%;
+    background-repeat: no-repeat;
 }
 
 #title {
-    transform: skewX(-45deg);
-    width: 45rem;
-    box-shadow: 45px 35px 5px gray;
-    border: 2px solid white;
-    /* border-right: 2px solid white; */
-    border-radius: 0 15px;
-    padding: 25px;
-    margin:10vh auto 7vh auto;
+    font-family: Arial, Helvetica, sans-serif;
+    transform: skewX(40deg);
+    width: 600px;
+    box-shadow: -25px 15px 5px gray;
+    border-left: 4px solid white;
+    border-bottom: 4px solid white;
+    border-radius: 15px 15px;
+    padding: 10px 40px;
     text-anchor: middle;
 }
 
-#title h1 {
-    transform: skewX(45deg);
-    font-size: 2rem;
+#title h4, #title a {
+    transform: skewX(-40deg);
+    text-decoration: none;
 }
 
 .modal-dialog {
@@ -34,4 +36,26 @@
 .sessions {
     margin-top: 15vh;
     text-shadow: 5px 5px 5px black;
+}
+
+@media screen and (max-width: 576px) {
+    
+    #topDiv {
+        height: auto;
+        padding-top: auto;
+    }
+
+    #title {
+        transform: skewX(0deg);
+        width: auto;
+        box-shadow: none;
+        border: none;
+        border-radius: 0px;
+        padding: 0;
+    }
+    
+    #title h4 {
+        transform: skewX(0deg);
+        font-size: 1rem;
+    }
 }
