--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
+body {
+    height: 124vh;
+}
+
 .img {
     border: 2px solid black;
     border-radius: 12px;
@@ -63,7 +67,17 @@
     color: black;
     padding: 10%;
 }
-.vba div, .team div, .leaflet div {
+
+.firebase {
+    background-image: url('./images/firebase1.jpg');
+    background-size: 100% 135%;
+    background-repeat: no-repeat;
+    background-position-y: 100%;
+    color: black;
+    padding: 10%;
+}
+
+.vba div, .team div, .leaflet div, .firebase div {
     background-color: #fff;
     padding: 2%;
     opacity: .85;
