--- a/assets/style.css
+++ b/assets/style.css
@@ -111,7 +111,7 @@ body {
     width: 50%;
     margin: 0 auto;
     overflow: hidden;
-    animation: carousel 7s;
+    animation: carousel 10s;
 }
 
 .type {
@@ -137,7 +137,7 @@ body {
     text-shadow: none;
     z-index: 99;
     transform-origin: -20%;
-    animation: hours 3s 4s;
+    animation: hours 3s 7s;
 }
 
 .child_1 {
@@ -288,14 +288,14 @@ g text {
 }
 
 .fire {
-    top: 0px;
-    left: 80%;
-    width: 13px;
-    height: 15px;
+    top: -13px;
+    left: 74%;
+    width: 24px;
+    height: 27px;
     position: absolute;
     border-radius: 90px;
     background: orange;
-    opacity: 0; 
+    opacity: 0;
     animation: fire 4s 1s;
 }
 
@@ -304,31 +304,31 @@ g text {
         opacity: 1;
         transform: rotateY(0deg);
     }
-    10% {
-        transform: rotateY(180deg);
-    }
-    10% {
+    8%{
         transform: rotateY(0deg);
     }
-    17% {
-        transform: rotateY(0deg);
+    10% {
+        transform: rotateY(50deg);
+    }
+    18% {
+        transform: rotateY(50deg);
     }
     20% {
-        transform: rotateY(180deg);
+        transform: rotateY(0deg);
     }
-    27% {
+    28% {
         transform: rotateY(180deg);
     }
     30% {
-        transform: rotateY(0deg);
+        transform: rotateY(50deg);
     }
-    37% {
-        transform: rotateY(0deg);
+    38% {
+        transform: rotateY(50deg);
     }
     40% {
         transform: rotateY(180deg);
     }
-    47% {
+    48% {
         transform: rotateY(180deg);
     }
     50% {
@@ -338,16 +338,16 @@ g text {
 }
 
 .eli1 {
-    cx: 50%;
-    cy: 50%;
+    cx: 21%;
+    cy: 7%;
     rx: 12%;
     ry: 7%;
     fill: gray;
 }
 
 .eli2 {
-    cx: 60%;
-    cy: 55%;
+    cx: 29%;
+    cy: 21%;
     rx: 9%;
     ry: 7%;
     fill: gray;
@@ -355,12 +355,12 @@ g text {
 
 .smoke {
     position: absolute;
-    height: 40px;
-    width: 40px;
+    height: 80px;
+    width: 80px;
     left: 68%;
     top: -25%;
     opacity: 0;
-    animation: smoke 3s 3s;
+    animation: smoke 4s 4s;
 }
 
 @keyframes smoke {
@@ -368,7 +368,7 @@ g text {
         opacity: 1;
     }
     100% {
-        transform: translateY(-5vh) scale(400%);
+        transform: translateY(1px) scale(400%);
         opacity: 0;
     }
 }
