--- a/assets/style.css
+++ b/assets/style.css
@@ -107,22 +107,43 @@ body {
 
 .carousel {
     box-shadow: 5px 5px 20px black;
+    transform-origin: 50% 50%;
+    animation: carousel 13.5s;
     border-radius: 12px;
-    width: 50%;
-    margin: 0 auto;
     overflow: hidden;
-    animation: carousel 10s;
+    margin: 2% auto;
+    width: 50%;
+}
+
+.textShadow {
+    fill: red;
+    stroke:black;
+}
+
+.textLetter {
+    fill: white;
+    stroke:black;
 }
 
 .type {
     text-align: center;
+    min-height: 8vh;
+    max-width: 60%;
+    margin: 0 auto;
+    color: blue;
+    font-weight: bold;
+    font-family: cursive;
+    font-size: 1.3rem;
 }
 @keyframes carousel {
     0% {
         opacity: 0;
     }
-    100% {
+    90% {
         opacity: 0;
+    }
+    100% {
+        opacity: 1;
     }
 }
 
@@ -137,7 +158,7 @@ body {
     text-shadow: none;
     z-index: 99;
     transform-origin: -20%;
-    animation: hours 3s 7s;
+    animation: hours 3s 9.5s;
 }
 
 .child_1 {
@@ -225,7 +246,7 @@ body {
 
 g text {
     font-size: 1.40rem;
-    font-weight: bold;
+    /* font-weight: bold; */
     font-family: fantasy;
     
 }
@@ -261,48 +282,62 @@ g text {
     10% {
         transform: rotate(10deg);
     }
-    35% {
+    20% {
         transform: rotate(10deg);
     }
-    40% {
+    20% {
         transform: rotate(120deg);
     }
-    50% {
+    30% {
         transform: rotate(70deg);
     }
-    60% {
+    40% {
         transform: rotate(110deg);
     }
-    70% {
+    50% {
         transform: rotate(80deg);
     }
-    80% {
+    60% {
         transform: rotate(100deg);
     }
-    85% {
+    65% {
         transform: rotate(90deg);
     }
-    100% {
+    75% {
         transform: translateY(70vh);
+    }
+    76% {
+        transform: translateY(68vh);
+    }
+    77% {
+        transform: translateY(70vh);
+    }
+    79% {
+        transform: translateY(70vh);
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        transform: translate(-600%, 1300%) scale(900%);
     }
 }
 
 .fire {
-    top: -13px;
-    left: 74%;
+    top: -5%;
+    left: 10%;
     width: 24px;
     height: 27px;
     position: absolute;
     border-radius: 90px;
     background: orange;
     opacity: 0;
-    animation: fire 4s 1s;
+    animation: fire 7s 1s;
 }
 
 @keyframes fire {
     30% {
         opacity: 1;
-        transform: rotateY(0deg);
+        transform: translateX(200px) rotateY(0deg);
     }
     8%{
         transform: rotateY(0deg);
@@ -333,7 +368,18 @@ g text {
     }
     50% {
         transform: rotateY(0deg);
+    }
+    70% {
+        transform: rotateY(50deg);
+    }
+    80% {
+        left: 75%;
         opacity: 1;
+    }
+    100% {
+        transform: rotateY(90deg);
+        left: 75%
+
     }
 }
 
@@ -360,14 +406,14 @@ g text {
     left: 68%;
     top: -25%;
     opacity: 0;
-    animation: smoke 4s 4s;
+    animation: smoke 4s 7s;
 }
 
 @keyframes smoke {
     10% {
         opacity: 1;
     }
-    100% {
+    90% {
         transform: translateY(1px) scale(400%);
         opacity: 0;
     }
