--- a/assets/style.css
+++ b/assets/style.css
@@ -139,9 +139,18 @@ button {
     max-width: 60%;
     margin: 0 auto;
     font-weight: bold;
-    font-family: cursive;
+    font-family: sans-serif;
     font-size: 1.3rem;
+    animation: type 3s 11s;
 }
+
+@keyframes type {
+    0% {
+        opacity: 0;
+        transform: scaleX(1000%);
+    }
+}
+
 @keyframes carousel {
     0% {
         opacity: 0;
@@ -255,9 +264,9 @@ button {
 }
 
 .hours g text {
-    font-size: 1.40rem;
-    /* font-weight: bold; */
-    font-family: fantasy;
+    font-size: 3rem;
+    font-weight: bolder;
+    /* font-family: fantasy; */
     
 }
 
@@ -331,7 +340,7 @@ button {
 }
 
 .fire {
-    top: -5%;
+    top: -30%;
     left: 10%;
     width: 24px;
     height: 27px;
@@ -469,6 +478,8 @@ button {
     .type {
         width: 100%;
         max-width: 100%;
+        font-size: .9rem;
+        padding: 5%;
     }
     .carousel {
         width: 95%;
