--- a/assets/style.css
+++ b/assets/style.css
@@ -51,6 +51,7 @@ body {
 .sessions {
     margin-top: 5vh;
     text-shadow: 5px 5px 5px black;
+    position: relative;
 }
 
 .team {
@@ -135,15 +136,15 @@ body {
     color: white;
     background-color: black;
     border: none;
-    border-left: 4px solid red;
+    border-right: 4px solid red;
     border-bottom: 4px solid red;
-    padding: 1%;
+    padding: 4%;
     border-radius: 12px;
     box-shadow: -11px 12px 5px gray;
-    /* font-size: 1.2rem; */
+    font-size: 1rem;
     /* text-shadow: -.5px 1px 0px red; */
     font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: serif;
 }
 
 .type {
@@ -155,13 +156,18 @@ body {
     font-weight: bold;
     font-family: sans-serif;
     font-size: 1.3rem;
-    /* animation: type 1s 11s; */
+    /* animation: type 12s; */
 }
 
 @keyframes type {
     0% {
         opacity: 0;
-        transform: scaleX(1000%);
+    }
+    90% {
+        opacity: 0;
+    }
+    91% {
+        transform: scaleX(200%);
     }
 }
 
@@ -184,12 +190,16 @@ body {
     width: 100%;
     border-radius: 12px;
 }
+#hours {
+    position: relative;
+    z-index: 2;
+}
 
 .hours {
     display: inline-block;
     position: relative;
     text-shadow: none;
-    z-index: 99;
+    z-index: 1;
     transform-origin: -20%;
     /* animation: hours 3.5s 8s; */
 }
@@ -216,14 +226,14 @@ body {
     rx: 16%;
     ry: 19%;
     border: 2px solid black;
-    fill: #006969;
+    fill: #1a9797;
 }
 .child_6 {
     cx: 85%;
     cy: 13%;
     rx: 14%;
     ry: 37%;
-    fill: #006969;
+    fill: #1a9797;
 }
 .child_8 {
     cx: 64%;
@@ -231,7 +241,7 @@ body {
     rx: 14%;
     ry: 15%;
     border: 2px solid black;
-    fill: #006969;
+    fill: #1a9797;
 }
 .child_9 {
     cx: 53%;
@@ -280,8 +290,6 @@ body {
 .hours g text {
     font-size: 3rem;
     font-weight: bolder;
-    /* font-family: fantasy; */
-    
 }
 
 .caroImg {
@@ -354,21 +362,24 @@ body {
 }
 
 .fire {
-    top: -30%;
-    left: 10%;
-    width: 35px;
-    height: 35px;
     position: absolute;
+    top: -50%;
+    left: 0%;
+    z-index: 1;
+    /* width: 100px;
+    height: 100px; */
+    width: 50px;
+    height: 55px;
     border-radius: 90px;
     background: orange;
-    opacity: 0;
-    /* animation: fire 6s 1s; */
+    /* opacity: 0; */
+    animation: fire 6s 1s;
 }
 
 @keyframes fire {
-    30% {
+    0% {
+        /* transform: translateX(200px); */
         opacity: 1;
-        transform: translateX(200px) rotateY(0deg);
     }
     8%{
         transform: rotateY(0deg);
@@ -404,12 +415,12 @@ body {
         transform: rotateY(50deg);
     }
     80% {
-        left: 75%;
+        left: 60%;
         opacity: 1;
     }
     100% {
         transform: rotateY(90deg);
-        left: 75%
+        left: 60%
 
     }
 }
@@ -437,7 +448,7 @@ body {
     left: 50%;
     top: -75%;
     opacity: 0;
-    /* animation: smoke 4s 6s; */
+    animation: smoke 4s 6s;
 }
 
 @keyframes smoke {
