--- a/assets/style.css
+++ b/assets/style.css
@@ -109,8 +109,8 @@ body {
 .carousel {
     box-shadow: 5px 5px 20px black;
     transform-origin: 50% 50%;
-    /* animation: carousel 20s; */
-    display: none;
+    animation: carousel 20s;
+    /* display: none; */
     border-radius: 12px;
     overflow: hidden;
     margin: 2% auto;
@@ -132,31 +132,17 @@ body {
     position: absolute;
 } */
 
-.type button {
-    color: white;
-    background-color: black;
-    border: none;
-    border-right: 4px solid red;
-    border-bottom: 4px solid red;
-    padding: 4%;
-    border-radius: 12px;
-    box-shadow: -11px 12px 5px gray;
-    font-size: 1rem;
-    /* text-shadow: -.5px 1px 0px red; */
-    font-weight: bolder;
-    font-family: serif;
-}
-
 .type {
     position: relative;
     text-align: center;
-    min-height: 8vh;
+    height: 15vh;
+    overflow: hidden;
     max-width: 60%;
     margin: 0 auto;
     font-weight: bold;
     font-family: sans-serif;
     font-size: 1.3rem;
-    /* animation: type 12s; */
+    animation: type 12s;
 }
 
 @keyframes type {
@@ -201,7 +187,7 @@ body {
     text-shadow: none;
     z-index: 1;
     transform-origin: -20%;
-    /* animation: hours 3.5s 8s; */
+    animation: hours 3.5s 8s;
 }
 
 .child_1 {
@@ -293,7 +279,7 @@ body {
 }
 
 .caroImg {
-    /* animation: caroImg 7s 8.5s infinite; */
+    animation: caroImg 7s 8.5s infinite;
 }
 
 @keyframes caroImg {
@@ -372,7 +358,7 @@ body {
     height: 55px;
     border-radius: 90px;
     background: orange;
-    /* opacity: 0; */
+    opacity: 0;
     animation: fire 6s 1s;
 }
 
