--- a/assets/style.css
+++ b/assets/style.css
@@ -113,7 +113,7 @@ body {
     /* display: none; */
     border-radius: 12px;
     overflow: hidden;
-    margin: 2% auto;
+    margin: 5% auto;
     width: 50%;
 }
 
@@ -131,40 +131,54 @@ body {
 /* .calendar {
     position: absolute;
 } */
-#type {
-    animation: scroll 150s 8s linear infinite;
+
+.type {
+    width: 90%;
+    transform: skewX(40deg);
+    overflow: hidden;
+    /* background: white; */
+    /* margin: 0% 0 5% 10%; */
+    text-align: center;
+    padding: 5% 0%;
+    margin: 0% auto;
+    height: 7.5rem;
 }
 
+.type p {
+    font-size: 1.2rem;
+    animation: scroll 150s 8s linear infinite;
+
+}
 @keyframes scroll {
     0% {
-        transform: translateY(5%);
+        transform: translateY(0%);
     }
-    3% {
-        transform: translateY(5%);
+    10% {
+        transform: translateY(0%);
     }
     100% {
         transform: translateY(-100%);
     }
 }
 
-.type {
-    position: relative;
-    text-align: center;
-    height: 15vh;
-    overflow: hidden;
-    max-width: 60%;
-    margin: 0 auto;
-    font-family: sans-serif;
-    font-size: 1.3rem;
-    animation: type 12s;
-    border-right: 4px solid red;
-    border-bottom: 4px solid red;
-    border-radius: 12px;
-    background: black;
+#typeDiv {
     color: white;
-    padding: 30px;
-    font-weight: lighter;
+    margin: 0 auto;
+    height: 9rem;
+    font-family: Arial, Helvetica, sans-serif;
+    transform: skewX(-40deg);
+    background: black;
+    width: 600px;
+    box-shadow: -25px 15px 5px grey;
+    border-left: 4px solid red;
+    border-top: 4px solid red;
+    border-radius: 15px 15px;
+    padding: 10px 40px;
+    text-anchor: middle;
+    overflow: hidden;
+    animation: type 12s;
 }
+
 @keyframes type {
     0% {
         opacity: 0;
@@ -509,7 +523,7 @@ body {
         transform: skewX(0deg);
         font-size: 1rem;
     }
-    .type {
+    #type {
         width: 100%;
         max-width: 100%;
         font-size: .9rem;
