--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-    height: 105vh;
+    height: 150vh;
 }
 
 #accordionExample {
@@ -146,14 +146,11 @@ body {
 
 .type p {
     font-size: 1.2rem;
-    animation: scroll 150s 8s linear infinite;
+    animation: scroll 15s linear infinite;
 
 }
 @keyframes scroll {
     0% {
-        transform: translateY(0%);
-    }
-    10% {
         transform: translateY(0%);
     }
     100% {
@@ -177,6 +174,12 @@ body {
     text-anchor: middle;
     overflow: hidden;
     animation: type 12s;
+}
+
+#speechTitle {
+    transform: skewX(40deg);
+    text-align: center;
+    color: cornflowerblue;
 }
 
 @keyframes type {
