--- a/assets/style.css
+++ b/assets/style.css
@@ -133,6 +133,7 @@ body {
 } */
 
 .type {
+    position: relative;
     width: 90%;
     transform: skewX(40deg);
     overflow: hidden;
@@ -146,15 +147,21 @@ body {
 
 .type p {
     font-size: 1.2rem;
-    animation: scroll 15s linear infinite;
-
+    animation: scroll 10s linear;
+    animation: scroll 10s linear infinite;
+    position: absolute;
+    bottom: 10px;
 }
+
 @keyframes scroll {
     0% {
+        transform: translateY(110%);
+    }
+    50% {
         transform: translateY(0%);
     }
     100% {
-        transform: translateY(-100%);
+        transform: translateY(0%);
     }
 }
 
